--- a/CSS/style-serie.css
+++ b/CSS/style-serie.css
@@ -100,7 +100,7 @@ body {
     flex-direction: row;
     text-decoration: none;
     list-style: none;
-    justify-content: center;
+    justify-content: space-around;
     gap: 15px;
 }
 
