--- a/CSS/style-serie.css
+++ b/CSS/style-serie.css
@@ -102,6 +102,7 @@ body {
     list-style: none;
     justify-content: space-around;
     padding: 10px;
+    width: 90%;
 }
 
 .nav-principalSerie ul {
@@ -111,11 +112,6 @@ body {
 .cuerpo-serie{
     padding: 30px 20px;
     margin: 0 15px;
-}
-    
-ul{
-    list-style: none;
-    text-decoration: none;
 }
 
 .nav-menu{
