--- a/CSS/style-serie.css
+++ b/CSS/style-serie.css
@@ -195,6 +195,7 @@ label {
     transform: translateY(-50%); 
     z-index: 1000; 
     margin-right: 20px;
+    color: white;
 }
 
 .nav-principalSerie {
