--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -227,9 +227,9 @@ a{
     }
     
     .cuerpo-premios {
-        padding: 40px 20px;
+       /* padding: 40px 20px;
         margin: 0 10px;
-        border-radius: 8px;
+        border-radius: 8px;*/
         text-align: center;
     }
     
