--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -71,7 +71,7 @@ a{
 
 @media screen and (max-width: 768px) {
     .nav-principal-premios {
-        flex-direction: column;
+        flex-direction: row;
         padding: 10px;
     }
   
@@ -132,6 +132,7 @@ a{
     
     body {
         font-size: small;
+        background-attachment: scroll;
     }
 }
 
