--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -161,6 +161,7 @@ a{
         flex-direction: column;
         padding: 20px 0;
         z-index: 1000;
+        text-decoration: none;
     }
     
     .nav-principal-premios {
@@ -173,6 +174,7 @@ a{
         margin: 10px 0;
         padding: 10px 20px;
         list-style: none;
+        text-decoration: none;
     }
     
     .cuerpo-premios {
