--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -161,13 +161,17 @@ a{
         flex-direction: column;
         padding: 20px 0;
         z-index: 1000;
-        background-color: #ff000038;
+        background-color: rgba(255,255,255,0.1);
     }
     
     .nav-principal-premios {
         position: relative;
         justify-content: space-between;
         padding: 10px 20px;
+        text-decoration: none;
+    }
+
+    .nav-principal-premios ul{
         text-decoration: none;
     }
     
