--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -152,7 +152,7 @@ a{
         flex-direction: column;
     }
 
-    .nav-centro-premios {
+   /* .nav-centro-premios {
         display: none;
         position: absolute;
         top: 150%;
@@ -162,8 +162,19 @@ a{
         padding: 20px 0;
         z-index: 1000;
         background-color: rgba(255,255,255,0.1);
-    }
+    }*/
     
+    label {
+        text-align: right; 
+        position: absolute; 
+        right: 15px; 
+        top: 50%;
+        transform: translateY(-50%); 
+        z-index: 1000; 
+        margin-right: 20px;
+        color: white;
+    }
+
     .nav-principal-premios {
         position: relative;
         justify-content: space-between;
