--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -136,7 +136,7 @@ a{
 }
 
 /* Media Query para móviles (560px y menores) */
-@media screen and (max-width: 560px) {
+/*@media screen and (max-width: 560px) {
     .burger {
         display: block;
         background: none;
@@ -152,7 +152,7 @@ a{
         flex-direction: column;
     }
 
-   /* .nav-centro-premios {
+    .nav-centro-premios {
         display: none;
         position: absolute;
         top: 150%;
@@ -162,7 +162,7 @@ a{
         padding: 20px 0;
         z-index: 1000;
         background-color: rgba(255,255,255,0.1);
-    }*/
+    }
     
     label {
         text-align: right; 
@@ -215,7 +215,7 @@ a{
         font-size: x-small;
         background-attachment: scroll; 
     }
-}
+}*/
 
 
 
@@ -302,7 +302,7 @@ a{
         line-height: 1.5;
         margin: 15px 0;
         text-align: center;
-    }
+    }*/
 
     @media screen and (max-width: 560px) {
     body {
@@ -416,4 +416,4 @@ a{
         height: auto;
         margin: 8px;
     }
-*/
+    }
