--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -190,6 +190,9 @@ a{
         display: flex;
         flex-direction: row;
         padding: 15px 10px;
+        position: relative;
+        justify-content: space-between;
+        padding: 10px 20px;
     }
     
     .nav-centro-premios {
