--- a/CSS/style-contacto.css
+++ b/CSS/style-contacto.css
@@ -223,14 +223,47 @@ a{
         font-size: small;
     }
     
+#toggle:checked + .burger + .nav-centro-contacto {
+    display: flex;
+    flex-direction: column;
+    }
+
+    #toggle {
+        display: none;
+        cursor: pointer;
+        color: white;
+        font-size: 24px;
+    }
+
+    .burger{
+        height: 93%;
+        font-size: xx-large;
+        display: flex;
+    }
+
+    label {
+        text-align: right; 
+        position: absolute; 
+        right: 15px; 
+        top: 50%;
+        transform: translateY(-50%); 
+        z-index: 1000; 
+        margin-right: 20px;
+        color: white;
+    }
+
     .contenido-contacto {
         width: 98%;
         margin: 0 auto;
     }
     
     .nav-principal-contacto {
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
         padding: 15px 10px;
+        position: relative;
+        justify-content: space-between;
+        padding: 10px 20px;
     }
     
     .nav-centro-contacto {
