--- a/CSS/style-contacto.css
+++ b/CSS/style-contacto.css
@@ -267,7 +267,7 @@ a{
     }
     
     .nav-centro-contacto {
-        flex-direction: column;
+        display: none;
         gap: 10px;
         width: 100%;
     }
