--- a/CSS/style-contacto.css
+++ b/CSS/style-contacto.css
@@ -241,7 +241,7 @@ a{
         display: flex;
     }
 
-    label {
+   /* label {
         text-align: right; 
         position: absolute; 
         right: 15px; 
@@ -250,7 +250,7 @@ a{
         z-index: 1000; 
         margin-right: 20px;
         color: white;
-    }
+    }*/
 
     .contenido-contacto {
         width: 98%;
