--- a/CSS/style-contacto.css
+++ b/CSS/style-contacto.css
@@ -226,6 +226,7 @@ a{
 #toggle:checked + .burger + .nav-centro-contacto {
     display: flex;
     flex-direction: column;
+    align-items: right;
     }
 
     #toggle {
