--- a/CSS/style-contacto.css
+++ b/CSS/style-contacto.css
@@ -226,7 +226,6 @@ a{
 #toggle:checked + .burger + .nav-centro-contacto {
     display: flex;
     flex-direction: column;
-    align-items: right;
     }
 
     #toggle {
@@ -240,6 +239,14 @@ a{
         height: 93%;
         font-size: xx-large;
         display: flex;
+        text-align: right; 
+        position: absolute; 
+        right: 15px; 
+        top: 50%;
+        transform: translateY(-50%); 
+        z-index: 1000; 
+        margin-right: 20px;
+        color: white;
     }
 
    /* label {
