--- a/CSS/style-contacto.css
+++ b/CSS/style-contacto.css
@@ -102,7 +102,7 @@ a{
 
 /* TABLET */
 
-@media screen and (max-width: 768px) {
+@media screen and (560px< width <= 768px) {
     body {
         background-attachment: scroll;
         font-size: small;
