--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -74,30 +74,6 @@ body{
     gap: 30px;
 }
 
-/*.salma{
-    padding: 30px;
-}
-
-.zazie{
-    padding: 0px;
-}
-
-.aron{
-    padding: 0px;
-}
-
-.kate{
-    padding: 0px;
-}
-
-.josh{
-    padding: 0px;
-}
-
-.anjana{
-    padding: 0px;
-}*/
-
 .pie-elenco{
     color: red;
     text-align: left;
@@ -194,13 +170,10 @@ a{
     }
     
     .logos-elenco {
-        align-items: center;
+        text-align: center;
         padding: 0 30px;
     }
 
-    div a{
-        align-items: center;
-    }
 }
 
 /* MÓVIL - 560px y menos */
