--- a/CSS/style-temporadas.css
+++ b/CSS/style-temporadas.css
@@ -233,8 +233,10 @@ a{
     }
     
     .nav-principal-temporadas {
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
         padding: 15px 10px;
+        justify-content: left;
     }
     
     .nav-centro-temporadas {
