--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -222,6 +222,9 @@ nav a{
     
 .cuerpo-premios {
     text-align: center;
+    padding: 40px 20px;
+    margin: 0 10px;
+    border-radius: 8px;
 }
     
 .cuerpo-premios h1 {
